[workspace]
resolver = "2"
members = [".", "migration", "entities"]

[package]
name = "anoquebot"
authors = ["Alexander Averyanov <alex@averyan.ru>"]
version = "0.2.1"
edition = "2021"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
sea-orm = { version = "1.1.3", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
tokio = { version = "1.42", features = ["full"] }

[dependencies]
anyhow = "1.0"
sentry = { version = "0.35", default-features = false, features = [
    "backtrace",
    "contexts",
    "panic",
    "anyhow",
    "tracing",
    "reqwest",
    "rustls",
] }
teloxide = { version = "0.13.0", features = [
    "ctrlc_handler",
    "throttle",
    "cache-me",
    "macros",
] }
migration = { path = "migration" }
entities = { path = "entities" }
tokio.workspace = true
sea-orm.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand = "0.8"
